Use CustomException and modernize streams/switch
Replace generic RuntimeException throws with CustomException helpers (badRequest, notFound, forbidden, conflict) across billing service implementations to provide clearer, typed errors. Update imports accordingly and add null-safe Boolean checks and extra validation for payment method gateway tokens. Modernize code by converting Stream.collect(Collectors.toList()) to Stream.toList() and refactor switch to use comma-separated labels and arrow syntax. Add a sonarqube report file documenting static analysis findings.